moved image & favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="/css/pure-min.css">
-        <link rel="stylesheet" href="/css/custom.css">        
+        <link rel="stylesheet" href="/css/custom.css">    
+        
+        <link rel="icon" href="/img/favicon.png" type="image/x-icon"/>
+        <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon"/>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
